2014-05-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl:
	* OutlineEditor.x3d: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditor.x3d:
	* OutlineEditorGrid.x3dv: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* ProtoNotFound.wrl:
	* OutlineEditor.wrl: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl: 

2014-05-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Clone.wrl:
	* OutlineEditor.wrl:
	* OutlineEditor.x3d: 

2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-EXPORT.x3dv: 

2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-EXPORT.x3dv:
	* OutlineEditor-IMPORT.x3dv: 

2014-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.x3dv:
	* DynamicInline.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Inline.wrl:
	* OutlineEditor.x3d:
	* OutlineEditor.wrl: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv: 

2014-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv: 

2014-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-EXPORT.x3dv: 

2014-05-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-07  Holger Seelig  <holger.seelig@yahoo.de>
