@@ -170,6 +170,11 @@
     <property name="stock">UngroupNodes</property>
     <property name="icon_size">1</property>
   </object>
+  <object class="GtkImage" id="image8">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-clear</property>
+  </object>
   <object class="GtkWindow" id="Window">
     <property name="width_request">768</property>
     <property name="height_request">480</property>
@@ -301,6 +306,22 @@
                         <property name="accel_group">MenuAccelGroup</property>
                         <signal name="activate" handler="on_revert_to_saved" swapped="no"/>
                         <accelerator key="F5" signal="activate"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkSeparatorMenuItem" id="menuitem1">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkImageMenuItem" id="RemoveUnusedPrototypesMenuItem">
+                        <property name="label" translatable="yes">Remove Unused Prototypes</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="image">image8</property>
+                        <property name="use_stock">False</property>
+                        <signal name="activate" handler="on_remove_unused_prototypes" swapped="no"/>
                       </object>
                     </child>
                     <child>
