@@ -37,7 +37,7 @@ function set_time (value, time)
 
 PROTO TransformTool [
   # required fields
-  eventIn      SFBool     enabled
+  eventIn      SFBool     set_enabled
   eventOut     SFBool     isActive
   exposedField SFMatrix4f cameraSpaceMatrix 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1
   exposedField SFMatrix4f modelViewMatrix 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1
@@ -82,7 +82,7 @@ PROTO TransformTool [
             children Transform {
               children [
                 DEF FrontSensor PlaneSensor {
-                  enabled IS enabled
+                  enabled IS set_enabled
                   autoOffset FALSE
                   isActive IS isActive
                 }
@@ -104,7 +104,7 @@ PROTO TransformTool [
               rotation 0 1 0 1.5708
               children [
                 DEF RightSensor PlaneSensor {
-                  enabled IS enabled
+                  enabled IS set_enabled
                   autoOffset FALSE
                   isActive IS isActive
                 }
@@ -117,7 +117,7 @@ PROTO TransformTool [
               rotation 0 1 0 3.14159
               children [
                 DEF BackSensor PlaneSensor {
-                  enabled IS enabled
+                  enabled IS set_enabled
                   autoOffset FALSE
                   isActive IS isActive
                 }
@@ -130,7 +130,7 @@ PROTO TransformTool [
               rotation 0 -1 0 1.5708
               children [
                 DEF LeftSensor PlaneSensor {
-                  enabled IS enabled
+                  enabled IS set_enabled
                   autoOffset FALSE
                   isActive IS isActive
                 }
@@ -143,7 +143,7 @@ PROTO TransformTool [
               rotation -1 0 0 1.5708
               children [
                 DEF TopSensor PlaneSensor {
-                  enabled IS enabled
+                  enabled IS set_enabled
                   autoOffset FALSE
                   isActive IS isActive
                 }
@@ -156,7 +156,7 @@ PROTO TransformTool [
               rotation 1 0 0 1.5708
               children [
                 DEF BottomSensor PlaneSensor {
-                  enabled IS enabled
+                  enabled IS set_enabled
                   autoOffset FALSE
                   isActive IS isActive
                 }
@@ -172,10 +172,10 @@ PROTO TransformTool [
           DEF X Group {
             children [
               DEF ModeTouch TouchSensor {
-                enabled IS enabled
+                enabled IS set_enabled
               }
               DEF XTranslationSensor PlaneSensor {
-                enabled IS enabled
+                enabled IS set_enabled
                 description "x-Axis"
                 autoOffset FALSE
                 maxPosition -1 0
@@ -235,7 +235,7 @@ PROTO TransformTool [
             children [
               USE ModeTouch
               DEF YTranslationSensor PlaneSensor {
-                enabled IS enabled
+                enabled IS set_enabled
                 description "y-Axis"
                 autoOffset FALSE
                 maxPosition 0 -1
@@ -287,7 +287,7 @@ PROTO TransformTool [
             children [
               USE ModeTouch
               DEF ZTranslationSensor PlaneSensor {
-                enabled IS enabled
+                enabled IS set_enabled
                 description "z-Axis"
                 axisRotation 0 -1 0 1.5708
                 autoOffset FALSE
@@ -625,7 +625,7 @@ PROTO TransformTool [
   DEF DoubleClick_1 DoubleClick { }
 
   DEF ModeScript Script {
-    eventIn  SFBool  set_enabled IS enabled
+    eventIn  SFBool  set_enabled IS set_enabled
     eventIn  SFBool  set_active
     eventIn  SFTime  set_time
     eventOut SFTime  touchTime
