@@ -1,3 +1,7 @@
+2014-05-16  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineEditor.wrl: 
+
 2014-05-15  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Clone.wrl:
